Add Google Analytics tracking, update logo styling, and refine contact information across multiple pages for improved user engagement and consistency.

--- a/about.html
+++ b/about.html
@@ -3,6 +3,17 @@
 
 <head>
 
+	<!-- Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMF699VTN"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+	  
+		gtag('config', 'G-7VMF699VTN');
+	</script>
+	<!-- End Google Analytics -->
+
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="" />
 	<link rel="icon" type="image/png" href="images/logo/3adurian-logo.png">
@@ -414,6 +425,10 @@
 				padding: 6px 12px;
 				font-size: 12px;
 			}
+			
+			#logo {
+				font-size: 1rem !important;
+			}
 		}
 	</style>
 
@@ -432,8 +447,8 @@
 				<div class="container">
 					<div class="header-row">
 
-						<!-- Logo -->
-						<div id="logo"></div><!-- #logo end -->
+					<!-- Logo -->
+					<div id="logo" style="color: #1B5E20; font-weight: 600; font-size: 1.5rem;">3A Durian(M)Sdn.Bhd</div><!-- #logo end -->
 
 						<div class="header-misc">
 							<div class="language-switcher">
@@ -524,7 +539,7 @@
 								<h4 class="nott font-weight-semibold mb-3 mt-5" style="color: #7CB342" data-translate="about.pandan.title">Pandan & Coconut</h4>
 								<p class="mb-4" data-translate="about.pandan.description">Pandan & Coconut infuse a natural, sweet aroma, natural green color and so called "Asia vanilla". A cornerstone of Southeast Asian culinary heritage.</p>
 								
-								<h4 class="nott font-weight-semibold mb-3 mt-5" style="color: #E91E63" data-translate="about.cempedak.title">Cempedak</h4>
+								<h4 class="nott font-weight-semibold mb-3 mt-5" style="color: #FFB343" data-translate="about.cempedak.title">Cempedak</h4>
 								<p class="mb-4" data-translate="about.cempedak.description">Cempedak is a beloved, pungent and intensely sweet, creamy tropical fruits native to Southeast Asia, particularly Malaysia. It was custard-like, orange-yellow flesh is highly sought after for desserts.</p>
 							</div>
 						</div>
@@ -596,7 +611,18 @@
 					<div class="row justify-content-center">
 						<div class="col-12 col-lg-8 text-center">
 							<p class="mb-2 text-white" data-translate="footer.rights">© 2026 3Adurian. All Rights Reserved.</p>
-							<p class="mb-2 text-white"><span data-translate="footer.website">Website</span>: <a href="https://3adurian.com" target="_blank" style="color: yellow;">3adurian.com</a> | <span data-translate="footer.email">Email</span>: <a href="mailto:3adurian2025@gmail.com" style="color: yellow;">3adurian2025@gmail.com</a></p>
+							<p class="mb-2 text-white">
+								<span data-translate="footer.website">Website</span>:
+								<a href="https://3adurian.com" target="_blank" style="color: yellow;">3adurian.com</a>
+								|
+								<span data-translate="footer.email">Email</span>:
+								<a href="mailto:3adurian2025@gmail.com" style="color: yellow;">3adurian2025@gmail.com</a>
+								|
+								<span>Facebook</span>:
+								<a href="https://www.facebook.com/profile.php?id=61580287135165" target="_blank" style="color: yellow;">
+									<i class="fab fa-facebook-f"></i> 3A Durian
+								</a>
+							</p>
 						</div>
 					</div>
 
@@ -610,7 +636,7 @@
 
 	<!-- Floating Contact Bubbles -->
 	<div class="floating-contacts">
-		<a href="https://wa.me/60197344930" target="_blank" class="contact-bubble whatsapp-bubble">
+		<a href="https://wa.me/60136666272" target="_blank" class="contact-bubble whatsapp-bubble">
 			<i class="fab fa-whatsapp"></i>
 			<div class="tooltip" data-translate="contact.whatsapp">Chat on WhatsApp</div>
 		</a>
