--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,17 @@
 
 <head>
 
+	<!-- Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMF699VTN"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+	  
+		gtag('config', 'G-7VMF699VTN');
+	</script>
+	<!-- End Google Analytics -->
+
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="" />
 	<link rel="icon" type="image/png" href="images/logo/3adurian-logo.png">
@@ -258,6 +269,10 @@
 				padding: 6px 12px;
 				font-size: 12px;
 			}
+			
+			#logo {
+				font-size: 1rem !important;
+			}
 		}
 
 		/* Map wrapper to prevent resize/jump on load */
@@ -292,8 +307,8 @@
 				<div class="container">
 					<div class="header-row">
 
-						<!-- Logo -->
-						<div id="logo"></div><!-- #logo end -->
+					<!-- Logo -->
+					<div id="logo" style="color: #1B5E20; font-weight: 600; font-size: 1.5rem;">3A Durian(M)Sdn.Bhd</div><!-- #logo end -->
 
 						<div class="header-misc">
 							<div class="language-switcher">
@@ -375,9 +390,9 @@
 							</div>
 							<p><strong data-translate="contact.website">Website:</strong> <a href="https://3adurian.com" target="_blank" style="color: #F4D03F">3adurian.com</a></p>
 							<p><strong data-translate="contact.email">Email:</strong> <a href="mailto:3adurian2025@gmail.com" style="color: #F4D03F">3adurian2025@gmail.com</a></p>
-							<p><strong data-translate="contact.phone">Phone:</strong> <a href="tel:+60197344930" style="color: #7CB342">+6019 734 4930</a></p>
-							<p><strong>WhatsApp:</strong> <a href="https://wa.me/60197344930" target="_blank" style="color: #7CB342">+6019 734 4930</a></p>
-							<p><strong>Facebook:</strong> <a href="https://www.facebook.com/profile.php?id=61580287135165" target="_blank" style="color: #FFB343"><i class="fab fa-facebook-f"></i> 3A Durian</a></p>
+							<p><strong data-translate="contact.phone">Phone:</strong> <a href="tel:+60136666272" style="color: #7CB342">+6019 734 4930</a></p>
+							<p><strong>WhatsApp:</strong> <a href="https://wa.me/60136666272" target="_blank" style="color: #7CB342">+6019 734 4930</a></p>
+							<p><strong>Facebook:</strong> <a href="https://www.facebook.com/profile.php?id=61580287135165" target="_blank" style="color: #FFB343"><i class="fab fa-facebook-f" style="color: #1877F2;"></i> 3A Durian</a></p>
 							<p class="mt-4"><strong data-translate="contact.location">Location:</strong><br>Spx Bercham Hub</p>
 						</div>
 						<div class="col-md-5">
@@ -432,7 +447,7 @@
 
 	<!-- Floating Contact Bubbles -->
 	<div class="floating-contacts">
-		<a href="https://wa.me/60197344930" target="_blank" class="contact-bubble whatsapp-bubble">
+		<a href="https://wa.me/60136666272" target="_blank" class="contact-bubble whatsapp-bubble">
 			<i class="fab fa-whatsapp"></i>
 			<div class="tooltip" data-translate="contact.whatsapp">Chat on WhatsApp</div>
 		</a>
