--- a/products.html
+++ b/products.html
@@ -2,6 +2,17 @@
 <html dir="ltr" lang="en-US">
 <head>
 
+	<!-- Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMF699VTN"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+	  
+		gtag('config', 'G-7VMF699VTN');
+	</script>
+	<!-- End Google Analytics -->
+
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="" />
 	<link rel="icon" type="image/png" href="images/logo/3adurian-logo.png">
@@ -256,6 +267,10 @@
 				padding: 6px 12px;
 				font-size: 12px;
 			}
+			
+			#logo {
+				font-size: 1rem !important;
+			}
 		}
 		
 		/* Product Image Styles */
@@ -344,8 +359,8 @@
 				<div class="container">
 					<div class="header-row">
 
-						<!-- Logo -->
-						<div id="logo"></div><!-- #logo end -->
+					<!-- Logo -->
+					<div id="logo" style="color: #1B5E20; font-weight: 600; font-size: 1.5rem;">3A Durian(M)Sdn.Bhd</div><!-- #logo end -->
 
 						<div class="header-misc">
 							<div class="language-switcher">
@@ -620,7 +635,7 @@
 
 	<!-- Floating Contact Bubbles -->
 	<div class="floating-contacts">
-		<a href="https://wa.me/60197344930" target="_blank" class="contact-bubble whatsapp-bubble">
+		<a href="https://wa.me/60136666272" target="_blank" class="contact-bubble whatsapp-bubble">
 			<i class="fab fa-whatsapp"></i>
 			<div class="tooltip" data-translate="contact.whatsapp">Chat on WhatsApp</div>
 		</a>
