Remove 404.html file and update navigation links across all pages to point to the correct HTML files

--- a/about.html
+++ b/about.html
@@ -448,7 +448,7 @@
 					<div class="header-row">
 
 					<!-- Logo -->
-					<div id="logo" style="color: #1B5E20; font-weight: 600; font-size: 1.5rem;"><a href="/" style="color: #1B5E20; text-decoration: none;">3A Durian(M)Sdn.Bhd</a></div><!-- #logo end -->
+					<div id="logo" style="color: #1B5E20; font-weight: 600; font-size: 1.5rem;"><a href="index.html" style="color: #1B5E20; text-decoration: none;">3A Durian(M)Sdn.Bhd</a></div><!-- #logo end -->
 
 						<div class="header-misc">
 							<div class="language-switcher">
@@ -487,16 +487,16 @@
 						<nav class="primary-menu">
 
 							<ul class="menu-container">
-								<li class="menu-item"><a class="menu-link" href="/">
+								<li class="menu-item"><a class="menu-link" href="index.html">
 									<div data-translate="nav.home">Home</div>
 								</a></li>
-								<li class="menu-item"><a class="menu-link" href="products">
+								<li class="menu-item"><a class="menu-link" href="products.html">
 									<div data-translate="nav.products">Products</div>
 								</a></li>
-								<li class="menu-item current"><a class="menu-link" href="about">
+								<li class="menu-item current"><a class="menu-link" href="about.html">
 									<div data-translate="nav.about">About Us</div>
 								</a></li>
-								<li class="menu-item"><a class="menu-link" href="contact">
+								<li class="menu-item"><a class="menu-link" href="contact.html">
 									<div data-translate="nav.contact">Contact Us</div>
 								</a></li>
 							</ul>
