Update Google Analytics tracking ID

--- a/about.html
+++ b/about.html
@@ -4,13 +4,13 @@
 <head>
 
 	<!-- Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMF699VTN"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZB4ZW55L9F"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
 	  
-		gtag('config', 'G-7VMF699VTN');
+		gtag('config', 'G-ZB4ZW55L9F');
 	</script>
 	<!-- End Google Analytics -->
 
