Refactor hero section subtitles in index.html and language.js

--- a/index.html
+++ b/index.html
@@ -531,7 +531,8 @@
 							<div class="col-lg-6 hero-copy-wrapper">
 								<p class="mb-1 hero-line hero-line-3-5" data-translate="hero.title2">Fruits Tapas</p>
 								<p class="mb-1 hero-line hero-line-3-5" data-translate="hero.subtitle1">The Taste of Tropical</p>
-								<p class="mb-0 hero-line hero-line-3-5" data-translate="hero.subtitle2">The Malaysia Premium Fruits Desserts.</p>
+								<p class="mb-1 hero-line hero-line-3-5" data-translate="hero.subtitle2a">The Malaysia</p>
+								<p class="mb-0 hero-line hero-line-3-5" data-translate="hero.subtitle2b">Premium Fruits Desserts.</p>
 							</div>
 						</div>
 					</div>
