Enhance SEO and navigation consistency by adding meta descriptions and canonical links to all main pages

--- a/about.html
+++ b/about.html
@@ -187,7 +187,8 @@
 	<!-- Document Title
 	============================================= -->
 	<title>About Us | 3Adurian - Premium Fusion Desserts</title>
-
+	<meta name="description" content="Learn about 3Adurian's story, vision, and passion for transforming Malaysian tropical fruits into premium fusion desserts." />
+	<link rel="canonical" href="https://3adurian.com/about.html" />
 	<style>
 		:root {
 			--font-montserrat: 'Montserrat', sans-serif;
@@ -448,7 +449,7 @@
 					<div class="header-row">
 
 					<!-- Logo -->
-					<div id="logo" style="color: #1B5E20; font-weight: 600; font-size: 1.5rem;"><a href="index.html" style="color: #1B5E20; text-decoration: none;">3A Durian(M)Sdn.Bhd</a></div><!-- #logo end -->
+					<div id="logo" style="color: #1B5E20; font-weight: 600; font-size: 1.5rem;"><a href="https://3adurian.com/" style="color: #1B5E20; text-decoration: none;">3A Durian(M)Sdn.Bhd</a></div><!-- #logo end -->
 
 						<div class="header-misc">
 							<div class="language-switcher">
@@ -487,7 +488,7 @@
 						<nav class="primary-menu">
 
 							<ul class="menu-container">
-								<li class="menu-item"><a class="menu-link" href="index.html">
+								<li class="menu-item"><a class="menu-link" href="https://3adurian.com/">
 									<div data-translate="nav.home">Home</div>
 								</a></li>
 								<li class="menu-item"><a class="menu-link" href="products.html">
