--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,8 @@
 	<!-- Document Title
 	============================================= -->
 	<title>Contact Us | 3Adurian - Premium Fusion Desserts</title>
-
+	<meta name="description" content="Get in touch with 3Adurian for any questions, feedback, or to place an order. We're here to help you experience the finest tropical fusion desserts Malaysia has to offer." />
+	<link rel="canonical" href="https://3adurian.com/contact.html" />
 	<!-- Global Font: Lexend -->
 	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
@@ -308,7 +309,7 @@
 					<div class="header-row">
 
 					<!-- Logo -->
-					<div id="logo" style="color: #1B5E20; font-weight: 600; font-size: 1.5rem;"><a href="index.html" style="color: #1B5E20; text-decoration: none;">3A Durian(M)Sdn.Bhd</a></div><!-- #logo end -->
+					<div id="logo" style="color: #1B5E20; font-weight: 600; font-size: 1.5rem;"><a href="https://3adurian.com/" style="color: #1B5E20; text-decoration: none;">3A Durian(M)Sdn.Bhd</a></div><!-- #logo end -->
 
 						<div class="header-misc">
 							<div class="language-switcher">
@@ -347,7 +348,7 @@
 						<nav class="primary-menu">
 
 							<ul class="menu-container">
-								<li class="menu-item"><a class="menu-link" href="index.html">
+								<li class="menu-item"><a class="menu-link" href="https://3adurian.com/">
 									<div data-translate="nav.home">Home</div>
 								</a></li>
 								<li class="menu-item"><a class="menu-link" href="products.html">
