--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Home | 3Adurian - Premium Fusion Desserts</title>
-
+	<title>3Adurian | Premium Malaysian Tropical Fusion Desserts</title>
+	<meta name="description" content="3Adurian is a premium Malaysian fusion dessert brand specializing in durian, pandan coconut, and tropical fruit creations crafted with artisan care." />
+	<link rel="canonical" href="https://3adurian.com/" />
 	<!-- Global Fonts: Lexend (main), Montserrat (hero titles) -->
 	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700&family=Montserrat:wght@700;800&display=swap" rel="stylesheet">
 
@@ -455,8 +456,7 @@
 					<div class="header-row">
 
 					<!-- Logo -->
-					<div id="logo" style="color: #1B5E20; font-weight: 600; font-size: 1.5rem;"><a href="index.html" style="color: #1B5E20; text-decoration: none;">3A Durian(M)Sdn.Bhd</a></div><!-- #logo end -->
-
+					<div id="logo" style="color: #1B5E20; font-weight: 600; font-size: 1.5rem;"><a href="https://3adurian.com/" style="color: #1B5E20; text-decoration: none;">3A Durian(M)Sdn.Bhd</a></div><!-- #logo end -->
 						<div class="header-misc">
 							<div class="language-switcher">
 								<button class="language-button" onclick="toggleLanguageDropdown()">
@@ -494,7 +494,7 @@
 						<nav class="primary-menu">
 
 							<ul class="menu-container">
-								<li class="menu-item current"><a class="menu-link" href="index.html">
+								<li class="menu-item current"><a class="menu-link" href="https://3adurian.com/">
 									<div data-translate="nav.home">Home</div>
 								</a></li>
 								<li class="menu-item"><a class="menu-link" href="products.html">
@@ -546,6 +546,7 @@
 							<div class="col-lg-6 mb-5 mb-lg-0 stagger-item">
 							<div class="heading-block border-bottom-0">
 								<h2 class="nott font-weight-semibold mb-4" style="color: #F4D03F;" data-translate="story.title">Our Story</h2>
+								<h1 class="mb-4">3Adurian - Premium Malaysian Tropical Fusion Desserts</h1>
 								<p class="mb-4" style="font-size: 1.1rem;" data-translate="story.intro">3Adurian is not just a dessert company; we are passionate artisans dedicated to transforming Malaysia's exotic tropical fruits into extraordinary fusion desserts that bridge traditional Southeast Asian flavors with modern culinary innovation.</p>
 								<p style="font-size: 1.1rem;" data-translate="story.description">Specializing in durian, pandan coconut, and cempedak creations, we craft each dessert with meticulous care, introducing the rich heritage and unmatched flavors of Malaysian tropical fruits to discerning palates worldwide.</p>
 							</div>
