--- a/products.html
+++ b/products.html
@@ -41,7 +41,8 @@
 	<!-- Document Title
 	============================================= -->
 	<title>Products | 3Adurian - Premium Fusion Desserts</title>
-
+	<meta name="description" content="Explore 3Adurian's premium Malaysian fusion desserts, featuring durian, pandan coconut, and tropical fruit creations." />
+	<link rel="canonical" href="https://3adurian.com/products.html" />
 	<!-- Global Font: Lexend -->
 	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
@@ -360,7 +361,7 @@
 					<div class="header-row">
 
 					<!-- Logo -->
-					<div id="logo" style="color: #1B5E20; font-weight: 600; font-size: 1.5rem;"><a href="index.html" style="color: #1B5E20; text-decoration: none;">3A Durian(M)Sdn.Bhd</a></div><!-- #logo end -->
+					<div id="logo" style="color: #1B5E20; font-weight: 600; font-size: 1.5rem;"><a href="https://3adurian.com/" style="color: #1B5E20; text-decoration: none;">3A Durian(M)Sdn.Bhd</a></div><!-- #logo end -->
 
 						<div class="header-misc">
 							<div class="language-switcher">
@@ -391,7 +392,7 @@
 						<nav class="primary-menu">
 
 							<ul class="menu-container">
-								<li class="menu-item"><a class="menu-link" href="index.html"><div data-translate="nav.home">Home</div></a></li>
+								<li class="menu-item"><a class="menu-link" href="https://3adurian.com/"><div data-translate="nav.home">Home</div></a></li>
 								<li class="menu-item current"><a class="menu-link" href="products.html"><div data-translate="nav.products">Products</div></a></li>
 								<li class="menu-item"><a class="menu-link" href="about.html"><div data-translate="nav.about">About Us</div></a></li>
 								<li class="menu-item"><a class="menu-link" href="contact.html"><div data-translate="nav.contact">Contact Us</div></a></li>
